WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129414
Fix two assertions/crashes in compositing code
https://bugs.webkit.org/show_bug.cgi?id=129414
Summary
Fix two assertions/crashes in compositing code
Simon Fraser (smfr)
Reported
2014-02-26 18:05:50 PST
Fix two assertions/crashes in compositing code
Attachments
Patch
(2.01 KB, patch)
2014-02-26 18:07 PST
,
Simon Fraser (smfr)
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-02-26 18:07:24 PST
Created
attachment 225333
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-02-26 18:11:32 PST
https://trac.webkit.org/r164769
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug