Fix two assertions/crashes in compositing code https://bugs.webkit.org/show_bug.cgi?id=129414

Reviewed by Dean Jackson.

Fix two issues introduced in r164759.

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::removeFromScrollCoordinatedLayers): Don't call
ourselves recursively!
(WebCore::RenderLayerCompositor::detachScrollCoordinatedLayer): We call this
function unconditionally on layer teardown, so this assertion is bogus.

Canonical link: https://commits.webkit.org/147463@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164769 268f45cc-cd09-0410-ab3c-d52691b4dbfc